--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.2",
     "framer-motion": "^12.24.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.11.0",
     "remixicons": "^4.6.1",
     "tailwindcss": "^4.1.18"
