--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.24.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-international-phone": "^4.6.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.11.0",
     "remixicons": "^4.6.1",
